# basalt

./: .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/src/basalt/: __init__.py  main.py
backend/src/basalt/routers/: export.py  layout.py  terrain.py
backend/src/basalt/schemas/: layout.py  terrain.py
backend/src/basalt/services/: export.py  geometry.py  layout.py  setback.py
backend/src/basalt/tests/: test_export.py  test_geometry.py  test_health.py  test_layout.py  test_setback.py  test_terrain_api.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  layout.ts  terrain.ts
frontend/src/components/Canvas/: CanvasRoot.tsx  GridLayer.tsx  TerrainLayer.tsx
frontend/src/components/Sidebar/: TerrainForm.tsx
frontend/src/hooks/: useZoomPan.ts
frontend/src/store/: terrainStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: geometry.ts  scale.ts
