[project]
name = "basalt"
version = "0.1.0"
description = "Interactive 2D floor plan tool — backend API"
readme = "README.md"
authors = [
    { name = "Brice Boudehent", email = "brice.boudehent@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "shapely>=2.0",
    "svgwrite>=1.4",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
